cleanup and html

--- a/data/index.html
+++ b/data/index.html
@@ -5,15 +5,14 @@
     <meta charset="utf-8">
     <title>ESP-CLOCK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/water.css">
 </head>
 
 <body>
     <div id="main">
-        <h1>ENABLE JAVASCRIPT TO CONFIGURE THE CLOCK</h1>
+        <span>ENABLE JAVASCRIPT TO CONFIGURE THE CLOCK</span>
     </div>
     <script src="/main.js"></script>
-
 </body>
 
 </html>
