load json form spiffs

--- a/data/index.html
+++ b/data/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
-    <div id="main">
-        <span>ENABLE JAVASCRIPT TO CONFIGURE THE CLOCK</span>
+    <span id="jswarn">ENABLE JAVASCRIPT TO CONFIGURE THE CLOCK</span>
+    <div id="main" style="display:none">
+        <form>
+            <label for="test">Testme</label>
+            <input type="text" id="test" name="test" />
+        </form>
     </div>
     <script src="/main.js"></script>
 </body>
