hour segments, quarter dots and color blending

--- a/data/index.html
+++ b/data/index.html
@@ -94,6 +94,14 @@
                         <label for="hourdotcolor">Hour dot color</label>
                         <input type="color" id="hourdotcolor" name="hourdotcolor" />
                     </div>
+                    <div class="inputgroup">
+                        <label for="hourdotcolor">Hour segment color</label>
+                        <input type="color" id="hoursegmentcolor" name="hoursegmentcolor" />
+                    </div>
+                    <div class="inputgroup">
+                        <label for="hourdotcolor">Hour quarter color</label>
+                        <input type="color" id="hourquartercolor" name="hourquartercolor" />
+                    </div>
                 </div>
             </fieldset>
             <p>
