implemented fluid transition

--- a/web/index.html
+++ b/web/index.html
@@ -149,6 +149,10 @@
                 <label for="blendcolors">Blend colors when elements overlap?</label>
                 <input type="checkbox" id="blendcolors" name="blendcolors" />
             </p>
+            <p>
+                <label for="blendcolors">Enable fluid fading between the pixels for the second hand?</label>
+                <input type="checkbox" id="fluidmotion" name="fluidmotion" />
+            </p>
             <label for="timezone">Local timezone <span class="aside">(Change requires restart)</span></label>
             <select id="timezone" name="timezone"></select>
             <h3>LED settings</h3>
