small html update

--- a/web/index.html
+++ b/web/index.html
@@ -197,7 +197,7 @@
     </div>
     <footer>ESP NeoPixel Clock <span id="version"></span> by Merlin Schumacher.
         <a href="https://github.com/merlinschumacher/esp8266-clock" target="_blank">
-            Source and Info
+            Source code and more infos on GitHub.
         </a>
     </footer>
     <script src="/main.js"></script>
