addtional changes for backlight

--- a/web/index.html
+++ b/web/index.html
@@ -153,11 +153,11 @@
                     </div>
                 </div>
             </fieldset>
-            <p class="optbglight">
+            <p>
                 <label for="bglight">Enable a second LED strip as background light?</label>
                 <input type="checkbox" id="bglight" name="bglight" onclick="showBgLight()" />
             </p>
-            <fieldset id="bglightfield" class="optbglight">
+            <fieldset id="bglightfield">
                 <legend>Background light settings</legend>
                 <div class="inline">
                     <div class="inputgroup">
