working background implementation

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
             color: #666;
         }
 
-        .optbacklight {
+        #bglightfield {
             display: none;
         }
     </style>
@@ -155,7 +155,7 @@
             </fieldset>
             <p>
                 <label for="bglight">Enable a second LED strip as background light?</label>
-                <input type="checkbox" id="bglight" name="bglight" onclick="showBgLight()" />
+                <input type="checkbox" id="bglight" name="bglight" />
             </p>
             <fieldset id="bglightfield">
                 <legend>Background light settings</legend>
